--- a/src/styles/sidebar-footer.css
+++ b/src/styles/sidebar-footer.css
@@ -1,179 +1,181 @@
-body{
-    background-color: #000;
-    font-family: var(--font-dm-sans);
-}
-
-h1{
-    color: #fff;
-}
-
-.sidebar{
+.sidebar {
     position: fixed;
-    top: 0;
     left: 0;
-    bottom: 0;
-    padding: 12px;
+    top: 0;
     width: 300px;
+    background-color: #000000;
+    padding: 12px;
 }
 
-.sidebar__navigation{
-    background-color: #121212;
-    border-radius: 8px;
-    padding: 16px 0 0 16px;
-}
-
-.sidebar__navigation .logo{
+.sidebar .logo {
     background-color: #121212;
     display: flex;
     border-radius: 8px;
     padding: 16px 0 0 16px;
 }
 
-.sidebar__navigation .logo img{
+.sidebar .logo img {
     width: 80px;
-    
 }
 
-.sidebar nav ul{
+.sidebar__navigation {
+    background-color: #121212;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.sidebar nav ul {
+    list-style: none;
     margin-top: 20px;
-    padding: 0 20px 10px 20px;
+    padding: 0px 20px 10px 20px;
 }
 
-.sidebar ul li{
-    padding: 10px 0;
+.sidebar nav ul li {
+    padding: 10px 0px;
 }
 
-.sidebar nav ul li a{
+.sidebar nav ul li a {
     color: #b3b3b3;
     text-decoration: none;
     font-weight: 600;
-    font-size: 14;
+    font-size: 14px;
 }
 
-.library{
+.sidebar nav ul li .fa {
+    font-size: 20px;
+    margin-right: 10px;
+    font-weight: 300;
+}
+
+.sidebar nav ul li a:hover {
+    color: #ffffff;
+}
+
+.library {
     background-color: #121212;
     border-radius: 8px;
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
+    min-block-size: 40px;
     padding: 4px 8px;
     color: #b3b3b3;
     font-weight: 600;
     font-size: 14px;
     margin-top: 10px;
+    flex-direction: column;
 }
 
-.library .library__content{
-    display: flex;
-    justify-content: space-between;
-}
-
-.library .library__button{
-    display: flex;
+.library .library__button {
     margin-right: 10px;
     color: #b3b3b3;
     background-color: transparent;
     border: 0px;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
     text-align: center;
     text-decoration: none;
     text-transform: none;
     padding: 20px 10px;
-    cursor: pointer
+    display: flex;
 }
 
-.library .library__button .fa{
+.library .library__button .fa {
     font-size: 20px;
     margin-right: 10px;
     font-weight: 300;
     padding-right: 8px;
 }
 
-.library .library__content .fa-plus{
-    margin: 24px 10px;
-    cursor: pointer;
+.library__content {
+    display: flex;
+    justify-content: space-between;
 }
 
-.section-playlist{
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    gap: 20px;
+.library .library__content .fa-plus {
+   margin: 24px 10px;
+}
+
+.section-playlist {
     background-color: #242424;
+    align-items: flex-start;
+    border-radius: 8px;
+    gap: 20px;
+    display: flex;
+    justify-content: space-between;
+    min-block-size: 40px;
     color: #b3b3b3;
     font-weight: 600;
     font-size: 14px;
-    margin: 8px 0px;
+    margin: 8px 0;
     padding: 16px 20px;
-    border-radius: 10px;
 }
 
-.section-playlist .section-playlist__content{
+.section-playlist .section-playlist__content {
     display: flex;
     flex-direction: column;
 }
 
-.section-playlist__content .text{
-    padding-bottom: 14px;
-    color: #fff;
+.section-playlist__content .text {
+   padding-bottom: 14px;
+   color: #fff;
 }
 
-.section-playlist__content .title{
-    font-weight: 700;
+.section-playlist__content .title {
+   font-weight: 700;
 }
 
-.section-playlist__content .subtitle{
+.section-playlist__content .subtitle {
     font-weight: 500;
-    font-size: 12px;
-}
+    font-size: 0.8rem;
+ }
 
-.section-playlist__content .section-playlist__button{
-    display: flex;
-    justify-content: center;
-    background-color: #fff;
+ .section-playlist__content .section-playlist__button {
+    background-color: #ffffff;
     color: #000;
-    border-radius: 20px;
-    font-size: 12px;
+    border-radius: 9999px;
+    display: flex;
+    font-size: 0.8rem;
     font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
     text-decoration: none;
     text-transform: none;
     padding: 10px;
-    margin-top: 12px;
-    border: 0;
+    border: 0px;
     width: 113px;
-    cursor: pointer;
+    justify-content: center;
+    margin-top: 12px;
 }
 
-.sidebar .cookies{
+.sidebar .cookies {
     margin: 25px 20px;
 }
 
-.sidebar .cookies a{
+.sidebar .cookies a {
     color: #b3b3b3;
     font-weight: 500;
-    font-size: 10px;
     text-decoration: none;
+    font-size: 10px;
 }
 
-.sidebar .cookies a:hover{
+.sidebar .cookies a:hover {
     text-decoration: underline;
 }
 
-.languages .languages__button{
-    align-items: center;
+.languages .languages__button {
     background-color: transparent;
+    border-radius: 9999px;
     border: 1px solid #878787;
     color: #fff;
-    font-weight: bold;
     cursor: pointer;
+    align-items: center;
+    padding: 8px;
     width: 170px;
     margin: 8px;
-    padding: 8px;
-    border-radius: 20px;
+    font-weight: bold;
 }
 
-.disclaimer-premium{
+.disclaimer-premium {
     position: fixed;
     bottom: 0;
     left: 0;
@@ -183,12 +185,10 @@ h1{
     display: flex;
     justify-content: space-between;
 }
-
-.disclaimer-premium .text{
-    flex-shrink: 0;
+.disclaimer-premium .text {
+   flex-shrink: 0;
 }
-
-.disclaimer-premium .disclaimer-premium__title{
+.disclaimer-premium .disclaimer-premium__title {
     color: #ffffff;
     text-transform: uppercase;
     font-weight: 400;
@@ -196,13 +196,13 @@ h1{
     margin-bottom: 10px;
 }
 
-.disclaimer-premium .disclaimer-premium__subtitle{
+.disclaimer-premium .disclaimer-premium__subtitle {
     color: #ffffff;
     font-size: 14px;
     font-weight: 500;
 }
 
-.disclaimer-premium button{
+.disclaimer-premium button {
     background-color: #ffffff;
     color: #000000;
     font-size: 16px;
@@ -212,4 +212,8 @@ h1{
     border-radius: 40px;
     cursor: pointer;
     flex-shrink: 0;
+}
+
+#artistList {
+    display: none;
 }
